dashboard responsive done

--- a/src/Pages/DashboardAccount/AccountActivity/style.css
+++ b/src/Pages/DashboardAccount/AccountActivity/style.css
@@ -18,6 +18,9 @@
 .acc_active_table_md::-webkit-scrollbar{
     width: 5px;
 }
+.acc_tble{
+    min-width: 500px !important;
+}
 .acc_tble tr{
     box-shadow: none !important;
 }
@@ -57,4 +60,99 @@
 }
 .botm_btn>button{
     width: 200px;
+}
+
+/* mobile view card  */
+.mob_view_activity_card{
+    display: none;
+}
+.mobView_activiyty_card{
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0px 3px 6px #00000029;
+    padding: 20px;
+}
+.mobView_activiyty_card p{
+    margin-bottom: 3px;
+    font-size: .9rem;
+}
+
+.activity_row{
+    display: flex;
+    justify-content: space-between;
+}
+.activity_s_info{
+    margin-top: 15px;
+}
+.activity_s_info p{
+    /* margin-top: 10px; */
+    font-size: .9rem;
+    color: #2E58A6;
+}
+
+/* mobView_moreActivity_dtl_container */
+
+.mobView_moreActivity_dtl_container{
+    background-color: #F0F4FC;
+    /* margin: 30px auto; */
+    padding: 30px 30px;
+}
+.mobView_moreActivity_dtl_md{
+    margin-top: 20px;
+}
+
+@media(max-width:1275px){
+    .acc_active_table_md{
+        width: 510px;
+    }
+}
+@media(max-width:900px){
+    .acc_active_table_md{
+        width: 410px;
+    }
+    .acc_activity_right_md{
+        margin-left: 15px;
+    }
+}
+@media(max-width:800px){
+    .mob_view_activity_card{
+        display: block;
+    }
+    .acc_activity_right_content{
+        display: none;
+    }
+    .acc_activity_right_md{
+        width: 90%;
+        margin: 20px auto;
+    }
+    .mobView_activiyty_card{
+        width: 90%;
+        margin: 10px auto;
+    }
+    .acc_activity_head{
+        display: none;
+    }
+}
+@media(max-width:600px){
+    .mobView_activiyty_card{
+        width: 100%;
+        margin: 10px auto;
+    }
+}
+@media(max-width:400px){
+    .showDetail_container{
+        width: 100%;
+        padding: 20px 15px;
+    }
+}
+@media(max-width:350px){
+    .mobView_activiyty_card{
+        padding: 15px;
+    }
+    .mobView_activiyty_card h6{
+        font-size: .9rem;
+    }
+    .mobView_activiyty_card p{
+        font-size: .8rem;
+    }
 }
