--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -940,6 +940,9 @@
   width: 100px;
 }
 
+@media screen and (max-width: 1050px) {
+}
+
 @media screen and (max-width: 1000px) {
   .tree_img,
   .station_img,
