--- a/src/Pages/DashboardAccount/AccountInfo/style.css
+++ b/src/Pages/DashboardAccount/AccountInfo/style.css
@@ -22,13 +22,23 @@
 .AInfo_conatainer{
     width: 450px;
 }
+@media(min-width:1200px){
+    ._accountInfo_form_container,.pD_container{
+        width: 40%;
+    }
+    .AInfo_conatainer{
+        width: 100%;
+
+    }
+
+}
 
 .aInfo_head{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.aInfo_head>h5{
+.aInfo_head>h5,.payment_head>h5{
     font-size: .9rem;
     margin-bottom: 0px;
 }
@@ -39,6 +49,15 @@
     padding: 8px 30px;
     border-radius: 6px;
     font-size: .9rem;
+}
+.mob_view_infoEdit_btn{
+    border: none;
+    outline: none;
+    background-color: white;
+    padding: 8px 30px;
+    border-radius: 6px;
+    font-size: .9rem;
+    display: none;
 }
 .aInfo_head>button>img{
     margin-right: 10px;
@@ -115,4 +134,90 @@
 .MuiSwitch-colorPrimary.Mui-checked + .MuiSwitch-track{
     background-color: #25D632 !important;
     opacity: .3 !important;
+}
+
+
+.mobileView_switch_content{
+    display: none;
+}
+
+
+@media (max-width:990px){
+    .acc_info_sd{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
+@media (max-width:970px){
+    .pD_container{
+        margin-left: 30px;
+        margin-top: 0px;
+    }
+}
+@media (max-width:910px){
+    .pD_container{
+        margin-left: 0px;
+        margin-top: 20px;
+    }
+}
+@media (max-width:600px){
+    .aInfo_head{
+        display: none;
+    }
+    .mob_view_infoEdit_btn{
+        display: block;
+    }
+    .profile_img{
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        margin-top: 20px;
+    }
+    .payment_head{
+        text-align: center;
+        margin-top: 15px;
+    }
+    .payment_head>h5{
+        font-weight: 700;
+
+    }
+    .acc_stng_ul{
+        display: none;
+    }
+    .mobileView_switch_content{
+        display: block;
+        margin-top: 15px;
+    }
+    .acc_seting_md{
+        text-align: center;
+    }
+    .acc_seting_md>h5{
+        font-weight: bold;
+    }
+    .mobileView_switch_content h6{
+        margin-bottom: 5px;
+        color: #2E58A6;
+        font-size: 1rem;
+    }
+}
+@media (max-width:500px){
+    .accInfo_rigth_md{
+        margin-left: 0px;
+        /* margin: 20px ; */
+        padding: 0px 15px;
+    }
+    .AInfo_conatainer{
+        width: 100%;
+    }
+    .AInfo_conatainer input{
+        font-size: .85rem;
+    }
+}
+@media (max-width:350px){
+    .profile_img>img{
+        width: 100px;
+    }
+    .mob_view_infoEdit_btn{
+        padding: 8px 20px;
+    }
 }
