--- a/src/Pages/ApiDoc/ApiDoc.css
+++ b/src/Pages/ApiDoc/ApiDoc.css
@@ -39,16 +39,20 @@
 
 .api_list_box {
   width: 100%;
-  height: 500px;
+  height: 100%;
   padding: 2rem 0;
-  overflow-y: scroll;
   display: flex;
   align-items: center;
   flex-direction: column;
   background-color: #f0f4fc;
 }
 
-.api_list_box::-webkit-scrollbar {
+.ad_left_list {
+  height: 300px;
+  overflow-y: auto;
+}
+
+.ad_left_list::-webkit-scrollbar {
   width: 10px;
   /* background: #000000; */
 }
@@ -74,8 +78,9 @@
 
 .api_content {
   width: 100%;
-  height: 500px;
-  overflow-y: scroll;
+  height: 400px;
+  padding: 30px 0;
+  overflow-y: auto;
 }
 
 .api_content::-webkit-scrollbar {
@@ -88,6 +93,7 @@
 
 .api_content p {
   font-size: 0.8rem;
+  color: #2E58A6;
 }
 
 .api_container .col-lg-3 {
@@ -140,4 +146,20 @@
 
 .ae_body h4 {
   color: #ffe600;
+}
+
+@media screen and (max-width:991px) {
+  .api_container .col-lg-3 {
+    width: 100%;
+  }
+  .api_editor {
+    margin: 0 auto;
+    width: 98%;
+}
+}
+
+@media screen and (max-width:768px) {
+  .api_container {
+    width: 90%;
+  }
 }
