--- a/src/Pages/OurPlans/OurPlans.css
+++ b/src/Pages/OurPlans/OurPlans.css
@@ -125,3 +125,13 @@
   width: 70%;
   margin: 10px auto;
 }
+
+
+@media screen and (max-width:991px) {
+  .plans_scroll {
+    display: flex;
+    flex-direction: row !important;
+    width: 600px;
+    overflow-x: auto;
+  }
+}
