--- a/src/Pages/Plan/Plan.css
+++ b/src/Pages/Plan/Plan.css
@@ -299,3 +299,28 @@
 .plan_success .ps_text {
   text-align: center;
 }
+
+
+@media screen and (max-width:1078px) {
+  .select_plan > div:nth-of-type(1),.p_text h2 {
+    font-size: 0.9rem;
+  }
+}
+
+@media screen and (max-width:991px) {
+  .select_plan {
+    width: 100%;
+  }
+  .d_p_text {
+    width: 100%;
+  }
+  .plan_content {
+    margin: 20px 0;
+  }
+}
+
+@media screen and (max-width:448px) {
+  .plan_container {
+    width: 90%;
+  }
+}
