--- a/src/Pages/DashboardAccount/TravelBooking/style.css
+++ b/src/Pages/DashboardAccount/TravelBooking/style.css
@@ -179,6 +179,11 @@
     width: 95%;
   }
 }
+@media (max-width: 800px) {
+  .tb_page_rigth_content h5{
+    display: none;
+  }
+}
 @media (max-width: 600px) {
   .travel_table_container{
     display: none;
